# parse-gam

./: .gitignore  pyproject.toml  run_model.sh
notebooks/: explore_1.ipynb
src/parse_gam/scripts/: parse_prediction.py  visualize_state.py
