[project]
name = "parse_gam"
version = "0.1.0"
description = "Parse Backgammon state from video."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipython>=9.6.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.214",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
parse-yolo-predictions = "parse_gam.scripts.parse_prediction:main"
visualize-state = "parse_gam.scripts.visualize_state:main"
